--- a/mabuyani.html
+++ b/mabuyani.html
@@ -4,6 +4,6 @@
         <title> Hello!</title>
         </head>
             <body>
-            Hello world! Kanyi ndiseli kwa Ngulukudela.
+            Mabuyani hango!!! Kanyi ndiseli kwa Ngulukudela.
             </body>
     </html>
