--- a/mabuyani.html
+++ b/mabuyani.html
@@ -2,6 +2,13 @@
     <html> 
         <head>
         <title> Hello!</title>
+            <style>
+                body {
+                    color: blue;
+  
+                }
+            color: blue;
+            </style>
         </head>
             <body>
             Mabuyani hango! Kanyi ndiseli kwa Ngulukudela.
