--- a/mabuyani.html
+++ b/mabuyani.html
@@ -4,7 +4,7 @@
         <title> Hello!</title>
             <style>
                 body {
-                    color: blue;
+                    color: red;
   
                 }
             color: blue;
